- Added NormalizeBrands as a new function
- Walker language now allows spaces for readability
- All 'Hacker' situations now have DeviceVersion field set.
- [BUG] Matchers with ONLY IsNull and Fixedstrings would never match.
- Added Opera Neon, Vivaldi and Firefox Focus

v1.2
===
- Limit use of IsNull operator.
- Fix root level fields.
- Fix issues with Hacker detection
- Implement DuckDuckGo app
- Implement several Tencent apps: WeChat, QQ Browser, QQ Client
- Cleanup and normalization of the language code
- [PIG] Return a schema with ONLY the requested fields
- Consistently add the Brand to the DeviceName to get a much more consistent dataset.
- Implement Google Pixel devices
- Improved the extraction of the DeviceName

v1.3
===
- Added simple classification tool
- Remove '_' from DeviceName
- Fixed NPE in Pig udf
- Shaded the used parts of Spring and the Antlr4 runtime to minimize the impact on downstream applications.

v1.4
===
- Rewrote the yaml reading to allow reporting the filename and line numbers.
- Added overwrite for specific Lenovo Tablets that do not conform to normal conventions.
- Made the Analyzer Serializable which should make using it in distributed systems easier.
- Improve the detection of certain Robots and the old Tablet PC
- Fixed class of broken useragents.
- Fixed false positive "Honor Note" matches SQL fragment "OR NOT"
- Detect Coc Coc Browser
- Improved commandline tool
- Make order of the extracted fields stable (Set --> List)
- Fail when asking for a field that cannot be extracted
- Fixed stackoverflow (infinite recursion) in specific parse situations.
- Fixed regex problem.

v2.0
===
- Upgraded to need Java 1.8 (hence the major version number)
- Added generic annotation/setter based parsing
- Added Apache Flink Mapper
- Added Apache Beam function
- Updated dependencies Antlr 4, Apache Hadoop, Apache Pig
- Changed the structure of an extracted Keyvalue.
- Rearranged the structure of StepDown (core step in walking around).
