@@ -37,6 +37,7 @@
 
     <hadoop.version>2.8.0</hadoop.version>
     <pig.version>0.17.0</pig.version>
+    <hive.version>2.1.1</hive.version>
     <checkstyle-plugin.version>2.17</checkstyle-plugin.version>
     <slf4j.version>1.7.25</slf4j.version>
     <logparser.version>3.1</logparser.version>
