@@ -1,0 +1,51 @@
+/*
+ * Yet Another UserAgent Analyzer
+ * Copyright (C) 2013-2017 Niels Basjes
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package nl.basjes.parse.useragent.hive;
+
+import org.apache.hadoop.hive.ql.metadata.HiveException;
+import org.apache.hadoop.hive.ql.udf.generic.GenericUDF.DeferredJavaObject;
+import org.apache.hadoop.hive.ql.udf.generic.GenericUDF.DeferredObject;
+import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspector;
+import org.apache.hadoop.hive.serde2.objectinspector.StandardStructObjectInspector;
+import org.apache.hadoop.hive.serde2.objectinspector.primitive.PrimitiveObjectInspectorFactory;
+import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+
+public class TestParseUserAgent {
+
+    @Test
+    public void testBasic() throws HiveException {
+        String userAgent = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36";
+
+        ParseUserAgent parseUserAgent = new ParseUserAgent();
+
+        StandardStructObjectInspector resultInspector = (StandardStructObjectInspector) parseUserAgent
+            .initialize(new ObjectInspector[]{ PrimitiveObjectInspectorFactory.javaStringObjectInspector });
+
+        Object row = parseUserAgent.evaluate(new DeferredObject[]{new DeferredJavaObject(userAgent)});
+
+        checkField(resultInspector, row, "DeviceName"           , "Linux Desktop");
+        checkField(resultInspector, row, "AgentNameVersionMajor", "Chrome 58"    );
+    }
+
+    private void checkField(StandardStructObjectInspector resultInspector, Object row, String fieldName, String expectedValue) {
+        assertEquals(expectedValue, resultInspector.getStructFieldData(row, resultInspector.getStructFieldRef(fieldName)).toString());
+    }
+
+}
