@@ -35,9 +35,7 @@
     <module>pig</module>
     <module>flink</module>
     <module>beam</module>
-
-    <!--TODO: Hive -->
-    <!--<module>hive</module>-->
+    <module>hive</module>
   </modules>
 
   <profiles>
