@@ -140,4 +140,5 @@ v2.0
 - Updated dependencies Antlr 4, Apache Hadoop, Apache Pig
 - Changed the structure of an extracted Keyvalue.
 - Rearranged the structure of StepDown (core step in walking around).
+- Added Apache Hive UDF
 
